--- a/src/style.css
+++ b/src/style.css
@@ -64,7 +64,8 @@ nav a.active {
 
 .image-slider-container {
   width: 400px;
-  max-width: 80%;
+  display: flex;
+  flex-direction: column;
   position: relative;
 }
 
@@ -100,4 +101,23 @@ nav a.active {
 
 .image-slider-container .prev {
     left: 30px;
+}
+
+.circles {
+  background-color: black;
+  display: flex;
+  gap: 12px;
+  padding: 8px;
+  justify-content: center;
+}
+
+.dot {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: white;
+}
+
+.dot:hover {
+  background-color: #eee;
 }
